--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.3",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.7",
+    "embla-carousel": "^7.0.3",
     "framer-motion": "^7.3.5",
     "next": "12.2.5",
     "react": "18.2.0",
