--- a/package.json
+++ b/package.json
@@ -13,13 +13,32 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
+    "@prisma/client": "^4.5.0",
+    "@types/react": "^18.0.23",
     "framer-motion": "^7.3.5",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.6",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
-  }
+    "eslint-config-next": "12.2.5",
+    "prisma": "^4.5.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/snowyru/MrRustin-website.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/snowyru/MrRustin-website/issues"
+  },
+  "homepage": "https://github.com/snowyru/MrRustin-website#readme"
 }
